feat: rename expired_at to expires_at
