# edge_admin/lib/edge_admin/commands/views/command_view.ex
@@ -13,7 +13,7 @@ defmodule EdgeAdmin.Commands.Views.CommandView do
       id: command.id,
       command_text: command.command_text,
       timeout: command.timeout,
-      expired_at: command.expired_at,
+      expires_at: command.expires_at,
       targeting: command.targeting,
       inserted_at: command.inserted_at,
       updated_at: command.updated_at
