# edge_admin/lib/edge_admin_web/controllers/agents/command_execution_json.ex
@@ -17,7 +17,7 @@ defmodule EdgeAdminWeb.Controllers.Agents.CommandExecutionJSON do
       command_id: execution.command_id,
       command_text: CommandExecution.command_text(execution),
       timeout: CommandExecution.timeout(execution),
-      expired_at: CommandExecution.expired_at(execution),
+      expires_at: CommandExecution.expires_at(execution),
       status: execution.status,
       inserted_at: execution.inserted_at
     }
