# edge_agent/lib/edge_agent_web/controllers/command_execution_json.ex
@@ -18,7 +18,7 @@ defmodule EdgeAgentWeb.Controllers.CommandExecutionJSON do
       node_id: command_execution.node_id,
       command_text: command_execution.command_text,
       timeout: command_execution.timeout,
-      expired_at: command_execution.expired_at,
+      expires_at: command_execution.expires_at,
       status: Atom.to_string(command_execution.status),
       output: command_execution.output,
       exit_code: command_execution.exit_code,
